update home page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<p> Hello World !!! </p>
+<html>
+    <title> The Main Page</title>
+
+    <h3>Efim's homepage</h3>
+    <p> The information, which I find useful, will be posted here </p>
+    <p><a href="resume.md"></a>Resume </a></p>
+</html>
