--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 
     <h3>Efim's homepage</h3>
     <p> The information, which I find useful, will be posted here </p>
-    <p><a href="resume.md"></a>Resume </a></p>
+    <p><a href="resume.md">Resume </a></p>
 </html>
