--- a/404.html
+++ b/404.html
@@ -18,8 +18,8 @@ layout: default
 </style>
 -->
 <div class="container">
-  <h3>The page not found!</h3>
+  <h3>The page is not found!</h3>
 
   <p><strong>Are you looking for something?</strong></p>
-  <p>Sure, you will find it somewhere. Don't give up</p>
+  <p>Sure, you will find it somewhere, don't give up</p>
 </div>
